# FastRepeat

./: .gitignore  CHANGELOG.md  FastRepeat.sln  LICENSE  README.md
.github/workflows/: build-linux.yml  build-release.yml
.signpath/: config.json
linux/: Cargo.toml  README.md  fastrepeat.desktop  fastrepeat.service  install.sh
linux/appimage/: AppRun  fastrepeat.desktop
linux/src/: config.rs  engine.rs  gui.rs  injector.rs  input.rs  main.rs  tray.rs
src/FastRepeat/: CaptureDialog.cs  FastRepeat.csproj  HookManager.cs  MainForm.cs  Program.cs  RepeatEngine.cs  TrayApp.cs  UpdateManager.cs  app.manifest
src/FastRepeat/Models/: AppSettings.cs  KeyBinding.cs
src/FastRepeat/Native/: NativeMethods.cs
