[package]
name = "fastrepeat"
version = "1.7.4"
edition = "2021"
authors = ["NQV4X0QN"]
description = "System-wide key and mouse button repeater for Linux"
license = "MIT"
repository = "https://github.com/NQV4X0QN/FastRepeat"

[dependencies]
evdev = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
nix = { version = "0.29", features = ["signal"] }
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
gtk4 = { version = "0.9", features = ["v4_6"] }
libadwaita = { version = "0.7", features = ["v1_2"] }

[[bin]]
name = "fastrepeat"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
